--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,12 @@ body{
 }
 
 header{
-
-}
-
-h1{
     text-align:left;
     margin-top:60px;
-    color: green;
-    font-size: 3em;
+    color: rgba(0, 128, 0, 0.4);
+    font-size: 2em;
     font-family: Papyrus;
+
 }
 
 #introduction{  /*Welcome message*/
@@ -35,6 +32,11 @@ h1{
     border-radius:8px;
 }
 
+#startGame:hover{
+    padding:4px 8px;
+    font-size:14px;
+}
+
 footer{
     text-align: center;
     border: 3px solid whitesmoke;
@@ -42,4 +44,3 @@ footer{
     padding: 10px;
     margin-top:200px;
 }
-
