--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ h1{
 footer{
     text-align: center;
     border: 3px solid whitesmoke;
-    background-color: darkgreen;
+    background-color: whitesmoke;
     padding: 10px;
     margin-top:200px;
 }
